--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,3 @@
 site_name: My Docs
-site_description: Documentation to help Monkey to code better
-theme: sandstone
-
-
-
+site_description: Documentation for Monkeys
+theme: readthedocs
