adding more data to mkconfig

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,20 @@
-site_name: My Docs
+site_name: Monkey Docs
+side_url: https://rakzhodekams.github.io/docblog/
 site_description: Documentation for Monkeys
-theme: readthedocs
+site_author: Monkey
+
+repo_url: https://github.com/rakzhodekams/docblog
+edit_uri: ""
+
+theme: 
+    name: readthedocs
+    locale: en
+    highlightjs: true
+    hljs_languages: 
+      - yaml
+      - ejs
+      - sh
+      - javascript
+      - markdown
+
+  
