--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,31 @@
 site_name: Monkey Docs
-side_url: https://rakzhodekams.github.io/docblog/
+site_url: https://rakzhodekams.github.io/docblog/
 site_description: Documentation for Monkeys
 site_author: Monkey
 
 repo_url: https://github.com/rakzhodekams/docblog
 edit_uri: ""
 
-theme: 
-    name: readthedocs
-    locale: en
-    highlightjs: true
-    hljs_languages: 
-      - yaml
-      - ejs
-      - sh
-      - javascript
-      - markdown
+#theme: 
+    #name: readthedocs
+    #locale: en
+    #highlightjs: true
+    #hljs_languages: 
+      #- yaml
+      #- ejs
+      #- sh
+      #- javascript
+      #- markdown
 
-  
+#nav: 
+
+  #- Home: index.md
+  #- Linux Tools: 
+      #- Encription: linux/gpg.md
+      #- Editor: linux/vim.md
+      #- Develop: linux/git.md
+      #- Security: linux/ssh.md
+  #- Thoughts: 
+      #- Tricky: github/thoughts.md
+
+
