mkdocs platforms don't give u freedom to change theme. Simplify the problem: no theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ repo_url: https://github.com/rakzhodekams/docblog
 edit_uri: ""
 
 #theme: 
-    #name: readthedocs
+    #name: monkey_theme
     #locale: en
     #highlightjs: true
     #hljs_languages: 
