--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,6 @@
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/time-machine@v0.2.0
 plugins: 
   - jekyll-remote-theme
+title: Dev Blog
+description: Where lazy brains save time 
+show_downloads: ["false"]
