--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,5 +2,4 @@ remote_theme: pages-themes/time-machine@v0.2.0
 plugins: 
   - jekyll-remote-theme
 title: Dev Blog
-description: Where lazy brains save time 
-show_downloads: ["false"]
+description: Linux Stuff - Where lazy brains save time 
