Make it Right for a better Ride

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
   - jekyll-remote-theme
-title: Monkey Development Blog Project
+title:
 description: Comments about Linux and Personal Reviews about OdicforceSounds
