--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
   - jekyll-remote-theme
 title: Monkey Blog
-description: Articles about Linux & Technology.  
+description: Articles about Linux & Technology. Out of the Box content, can exist.   
